--- a/src/lib/components/exception/exception.sass
+++ b/src/lib/components/exception/exception.sass
@@ -16,6 +16,7 @@
     border-radius: 10px
     height: 24px
     line-height: 24px
+    width: 198px
   .exception-wrap
     .exception-body
       max-height: calc(90vh - 64px)
