--- a/src/lib/components/dataTable/datatable.scss
+++ b/src/lib/components/dataTable/datatable.scss
@@ -2,6 +2,7 @@
   box-shadow: none !important;
 }
 .app-data-table {
+  position: relative;
   .app-data-table-title {
     font-size: 20px;
     line-height: 80px;
@@ -15,5 +16,9 @@
     button+button {
       margin-left: 4px;
     }
+  }
+  .app-data-table-refresh {
+    position: absolute;
+    bottom: 15px;
   }
 }
