--- a/src/lib/components/confirm/confirm.sass
+++ b/src/lib/components/confirm/confirm.sass
@@ -15,7 +15,7 @@
     min-width: 256px
   .header
     text-align: center
-    padding: 5px 0
+    padding: 5px 6px
     font-size: 18px
     font-weight: bold
   &-trans-enter,&-trans-leave-to
