--- a/src/lib/components/attachment/attachment.sass
+++ b/src/lib/components/attachment/attachment.sass
@@ -8,6 +8,7 @@
     background-color: #e5e5e5
   .attachment-placeholder
     text-align: center
+    width: 100%
     padding: 20px 0
   .attachment-list
     min-height: 128px
